# collaborative_3d_vision

./: .gitignore  CMakeLists.txt  README.md  package.xml
docs/: OBJECT_COORDINATES.md
src/collab_vision_msgs/: CMakeLists.txt  package.xml
src/collab_vision_msgs/msg/: AdvancedDetections.msg  AdvancedObject.msg  HumanKeypoint.msg
src/svo_yolo_vision/: package.xml  setup.cfg  setup.py
src/svo_yolo_vision/svo_yolo_vision/: hmi_server.py  yolo_detector.py
src/zed_hmi_server/: package.xml  setup.cfg  setup.py
src/zed_hmi_server/zed_hmi_server/: hmi_server_node.py
src/zed_vision/: package.xml  setup.cfg  setup.py
src/zed_vision/zed_vision/: coords_publisher.py  obj_viz_all.py
