<?xml version="1.0"?>
<package format="3">
  <name>collab_vision_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for collaborative vision</description>

  <maintainer email="kunal_kp@outlook.com">manipulator</maintainer>
  <license>Apache-2.0</license>

  <!-- REQUIRED -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- REQUIRED -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>

  <!-- REQUIRED so ROS2 exports these messages -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
